--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,11 @@
             <version>1.18.24</version>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.11</version>
+        </dependency>
     </dependencies>
 
 </project>
