--- a/pom.xml
+++ b/pom.xml
@@ -44,4 +44,19 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <finalName>addr-objects-tasks</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.7.13</version>
+                <executions>
+                    <execution>
+                        <goals><goal>repackage</goal></goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
